added stretch goals

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,10 @@ body > div {
   background-color: #275db3;
   color: white;
 }
+.green {
+  background-color: forestgreen;
+  color: white;
+}
 .home {
   background-color: burlywood;
   color: white;
